--- a/style.css
+++ b/style.css
@@ -1,1 +1,207 @@
-for stylish cv
+:root {
+    --black-color: #000000;
+    --ligth-blue-color: #46a5ca;
+    --deep-blue-color: #010d52;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  html {
+    scroll-behavior: smooth; 
+  }
+  
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 320px;
+    min-height: 100vh;
+    margin: 1px;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.4;
+    color: #5015f1;
+  }
+  
+  .header {
+    background-color: #00bcdd;
+  }
+  
+  .nav-list {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    list-style: none;
+  }
+  
+  .nav-link {
+    position: relative;
+    padding: 0 16px;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 45px;
+    color: #fff; 
+    transition: 0.5s;
+  }
+
+
+  .main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 0 20px;
+    margin-bottom: auto;
+  }
+
+
+  .section {
+    width: 50%;
+    padding: 20px;
+    padding-bottom: 35px;
+    border-bottom: 4px solid #1f1d1d;
+  }
+
+  .section-list {
+    margin: 0;
+    padding: 0;  
+    list-style: none;
+  }
+   
+  .section-item {
+    position: relative;
+    margin: 0;
+    margin-bottom: 10px;
+    padding: 0;
+    padding-left: 30px;
+  }
+
+  .section-title {
+    margin-bottom: 20px;  
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #35998c;
+  }
+  
+  .code {
+    padding: 10px;
+    margin: 5px;
+  }
+  
+  .section-subtitle {
+    margin-top: 20px;
+    color: #5c5c5c;
+    line-height: 50px;
+    font-weight: 300;
+    letter-spacing: 2px;
+  }
+  
+  .section-avatar {
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+
+  }
+  
+  .section-item::before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 2px;
+    width: 14px;
+    height: 14px; 
+    background-size: 14px 14px;
+    background-image: url("assets/svg/check.svg");
+  }
+  
+  .section-item a {
+    text-decoration: none;
+    color: #829985;
+    transition: color 0.6s;
+  }
+  
+  .section-item a:hover {
+    color: #39dd6a;
+  }
+
+  .contacts-item:before {
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 0px;
+    width: 24px;
+    height: 24px; 
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  
+  .contacts-item:nth-child(1):before {
+    background-image: url("assets/svg/location.svg");
+  }
+  
+  .contacts-item:nth-child(2):before {
+    top: 3px;
+    left: 0px;
+    width: 21px;
+    height: 21px;
+    background-image: url("assets/svg/email.svg");
+  }
+  
+  .contacts-item:nth-child(3):before {
+    top: 4px;
+    left: 0px;
+    width: 19px;
+    height: 19px;
+    background-image: url("assets/svg/github-icon.svg");
+  }
+  
+  .contacts-item:nth-child(4):before {
+    top: 3px;
+    left: 0px;
+    width: 21px;
+    height: 21px;
+    background-image: url("assets/svg/telegram.svg");
+  }
+  
+  .contacts-item:nth-child(5):before {
+    background-image: url("assets/svg/diskord.svg");
+  }
+
+  @media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
+  }
+
+  .footer {
+    background-color:#00bcdd;
+    padding: 10px;  
+  }
+  
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    color: #fff;
+  }
+  
+  .github {
+    color: #fff;
+    text-decoration: none;
+    line-height: 45px;
+  }
+  
+  .rss {
+    width: 121px;
+    height: 45px;
+    background-image: url("./Assets/svg/rsschool.svg");
+    background-size: contain;
+  }
